--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -9,17 +9,11 @@
     <nav>
       {% if user.is_authenticated%}
         Welcome, {{user.username}} | 
-        {% comment %} <a href="{% url 'home' %}">Home</a>
-        <a href="{% url 'producer_create' %}">Create Producer</a>
-        <a href="{% url 'movie_create' %}">Create Movie</a>
-        <form action="/auth/logout/" method="post"> {% endcomment %}
-          {% comment %} {% csrf_token %} {% endcomment %}
-          {% comment %} <button>Logout</button> {% endcomment %}
+        <form action="{% url 'logout' %}" method="post" style="display:inline;">
+          {% csrf_token %}
+          <button type="submit">Logout</button>
         </form>
       {% endif %}
-
-        {% comment %} <a href="{% url 'producer_list' %}">Producers</a>
-        <a href="{% url 'movie_list' %}">Movies</a> {% endcomment %}
     </nav>
     <div class="container">
       {% block content %}{% endblock %}
