--- a/main_app/templates/students/student_detail.html
+++ b/main_app/templates/students/student_detail.html
@@ -4,4 +4,9 @@
     <p>{{ student.username }}</p>
     <p>{{ student.email }}</p>
     <p>{{ student.phone_number }}</p>
+
+    <form action="{% url 'delete_student' student.pk%}" method="post">
+        {% csrf_token %}
+        <button type="submit">Delete Student</button>
+    </form>
 {% endblock %}
