--- a/main_app/templates/assignments/assignment_list.html
+++ b/main_app/templates/assignments/assignment_list.html
@@ -4,8 +4,7 @@
 <ul>
     {% for assignment in assignments %}
         <li>
-            {{ assignment.title }}
-            {% comment %} <a href="{% url 'assignment_detail' assignment.pk %}">{{ assignment.title }}</a> {% endcomment %}
+            <a href="{% url 'assignment_detail' assignment.pk %}">{{ assignment.title }}</a>
         </li>
     {% endfor %}
 </ul>
