--- a/main_app/templates/assignments/assignment_detail.html
+++ b/main_app/templates/assignments/assignment_detail.html
@@ -4,7 +4,7 @@
 <p>Deadline: {{ assignment.deadline }}</p>
 <p>GitHub Repository: {{ assignment.repo_url }}</p>
 <p>Technology: {{ assignment.technology }}</p>
-{% comment %} <a href="{% url 'edit_assignment' assignment.pk %}">Edit</a> {% endcomment %}
+<a href="{% url 'edit_assignment' assignment.pk %}">Edit</a>
 {% comment %} <form action="{% url 'delete_assignment' assignment.pk %}" method="post" style="display:inline;">
     {% csrf_token %}
     <button type="submit">Delete</button>
