--- a/main_app/templates/students/dashboard.html
+++ b/main_app/templates/students/dashboard.html
@@ -1,14 +1,41 @@
 {% extends "base.html" %}
 {% block content %}
-        <h2>Assignments To Submit</h2>
-        <ul>
-            {% for assignment in assignments %}
-                <li>
-                    <a href="{% url 'assignment_detail' assignment.pk %}">{{ assignment.title }}</a>
-                    (Due: {{ assignment.deadline }})
-                </li>
-            {% empty %}
-                <li>No pending assignments!</li>
-            {% endfor %}
-        </ul>
+    <h2>Pending Homeworks</h2>
+    <ul>
+        {% for assignment in pending_homeworks %}
+            <li>
+                <a href="{% url 'assignment_detail' assignment.pk %}">{{ assignment.title }}</a>
+                (Due: {{ assignment.deadline }})
+                <a href="{% url 'submit_assignment' assignment.pk %}"><button>+</button></a>
+            </li>
+        {% empty %}
+            <li>No pending homeworks!</li>
+        {% endfor %}
+    </ul>
+
+    <h2>Submitted Homeworks</h2>
+    <ul>
+        {% for submission in submitted_homeworks %}
+            <li>
+                <a href="{% url 'assignment_detail' submission.assignment.pk %}">{{ submission.assignment.title }}</a>
+                (Submitted: {{ submission.submitted_at|date:"Y-m-d H:i" }})
+                <a href="{% url 'submission_detail' submission.pk %}">View Submission</a>
+            </li>
+        {% empty %}
+            <li>No submitted homeworks.</li>
+        {% endfor %}
+    </ul>
+
+    <h2>Submitted Projects</h2>
+    <ul>
+        {% for submission in submitted_projects %}
+            <li>
+                <a href="{% url 'assignment_detail' submission.assignment.pk %}">{{ submission.assignment.title }}</a>
+                (Submitted: {{ submission.submitted_at|date:"Y-m-d H:i" }})
+                <a href="{% url 'submission_detail' submission.pk %}">View Submission</a>
+            </li>
+        {% empty %}
+            <li>No submitted projects.</li>
+        {% endfor %}
+    </ul>
 {% endblock %}
