--- a/main_app/templates/students/dashboard.html
+++ b/main_app/templates/students/dashboard.html
@@ -13,6 +13,19 @@
         {% endfor %}
     </ul>
 
+    <h2>Pending Projects</h2>
+    <ul>
+        {% for assignment in pending_projects %}
+            <li>
+                <a href="{% url 'assignment_detail' assignment.pk %}">{{ assignment.title }}</a>
+                (Due: {{ assignment.deadline }})
+                <a href="{% url 'submit_assignment' assignment.pk %}"><button>+</button></a>
+            </li>
+        {% empty %}
+            <li>No pending projects!</li>
+        {% endfor %}
+    </ul>
+
     <h2>Submitted Homeworks</h2>
     <ul>
         {% for submission in submitted_homeworks %}
