--- a/main_app/templates/profile.html
+++ b/main_app/templates/profile.html
@@ -26,6 +26,9 @@
     <ul>
         {% for submission in submitted_projects %}
             <li>
+                {% if submission.cover_image %}
+                    <img src="{{ submission.cover_image.url }}" alt="Cover" style="max-width:100px;vertical-align:middle;">
+                {% endif %}
                 <a href="{% url 'submission_detail' submission.pk %}">{{ submission.assignment.title }}</a>
                 (Submitted: {{ submission.submitted_at|date:"Y-m-d H:i" }})
             </li>
